Replacement of deprecated Runtime.exec(String) method